fixed menu spacing on services

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,7 +96,7 @@ h3 {
   display: flex;
   flex-direction: column;
   padding-top: 380px;
-  gap: 0px;
+  gap: 30px;
   text-align: left;
 }
 .menuServices {
